# gscp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
gscp/: __main__.py  commit.py  entry.py  git.py  push.py  push_pull.py  stage.py  version.py  wrappers.py
