[tool.poetry]
name = "gscp"
version = "1.0.0"
description = "A tool to quickly commit your work with git."
authors = ["Samuel Yvon <samuelyvon9@gmail.com>"]
readme = "README.md"
packages = [{include = "gscp"}]

[tool.poetry.dependencies]
rich = "^13.3.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
black="^22.12.0"
mypy="^1.0.0"
isort="^5.10.1"
ruff="^0.0.240"
pre-commit="^3.1.1"

[tool.poetry.scripts]
gscp = "gscp.entry:entry"

[tool.black]
target-version = ["py311", "py310", "py39", "py38", "py37"]

[tool.mypy]
python_version = "3.10"
exclude = ['venv/.*/*\.py$']
strict=true

[tool.ruff]
src = ["gscp"]
target-version = "py37"
select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle
  "RUF", # ruff
  "I", # isort
  "PT",   # flake8-pytest-style
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
